# soundscribe

./: .gitignore  README.md  pyproject.toml
soundscribe/: __init__.py  cli.py
