[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soundscribe"
version = "0.1.0"
description = "Audio transcription CLI tool using faster-whisper"
authors = [
    {name = "Tammy DiPrima", email = "tdiprima@yahoo.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "faster-whisper",
    "rich",
    "rich-argparse",
]

[project.scripts]
soundscribe = "soundscribe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["soundscribe"]
